--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,26 @@
 <% include partials/header %>
 <% include partials/navbar %>
-
-
-
+<div class="form">
+	<div class="form-bg"></div>
+	<div class="form-box">
+        <% if (done) { %>  
+              <p class="form-title">Thanks!</p>
+              <p>I'll try to get back to you shortly</p>
+              <p>In case I don't respond, you can try to contact me at</p>
+              <p class="red half-tab"> Email: <span class="green">hbdermott@gmail.com</span></p>
+        <% } else{ %>
+        <span class="typewriter">
+            <p class="form-title">Contact Me!</p>
+        </span>
+  
+		<form action="/contact" method="POST">
+			<input type="text" name="name" placeholder="Name..." required>
+			<input type="email" name="email" placeholder="Email..." required>
+			<input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Number...">
+			<textarea name="message" placeholder="Tell me something"></textarea>
+			<input type="submit" name="submit" value="Submit">
+		</form>
+    <% } %>
+	</div>
+</div>
 <% include partials/footer %>
