--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,7 +6,7 @@
             <a class="green" id="link-rs" href="HunterDermott.pdf"><i class="fas fa-arrow-circle-down"></i></a>
         </div>
         <div class="title">
-            <a href="/">hunter@bo</a>
+            <a id="name" href="/">hunter@bo</a>
         </div>
     </div>
 </nav>
